GNOME Bugzilla – Bug 752193
dhcp search domains ignored since commit 2a5eea7
Last modified: 2015-07-09 21:17:57 UTC
Commit 2a5eea7e769 introduces a regression in dhcp domain-search handling, due to missing braces around the code block evaluated when nm_setting_ip_config_get_ignore_auto_dns (s_ip4) is true (also for ipv6 in the same commit): + if (nm_setting_ip_config_get_ignore_auto_dns (s_ip4)) + nm_ip4_config_reset_nameservers (composite); + nm_ip4_config_reset_domains (composite); + nm_ip4_config_reset_searches (composite);
Good catch!! Thanks. fixed in master: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=d6831efc6bf37594b1674e442ca75e0e957bfecf nm-1-0: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=0eef608cd1ab7c20b4f1e40e02da7c8aaef2cf29