device: fix regression for ignored search domains in ip._config_merge_and_apply()

Reported-by: Fabrice Bellet <fabrice@bellet.info>
Fixes: 2a5eea7e7696c00befe81b934734f34ee150768f

https://bugzilla.gnome.org/show_bug.cgi?id=752193
(cherry picked from commit d6831efc6bf37594b1674e442ca75e0e957bfecf)